--- a/SourceGit/UI/Preference.xaml
+++ b/SourceGit/UI/Preference.xaml
@@ -36,7 +36,7 @@
         </Grid.ColumnDefinitions>
         
         <!-- 显示 -->
-        <Label Grid.Row="0" Grid.ColumnSpan="2" Content="Appearance" FontSize="18"/>
+        <Label Grid.Row="0" Grid.ColumnSpan="2" Content="APPEARANCE" FontSize="16" FontWeight="DemiBold" Opacity=".85"/>
         <Label Grid.Row="1" Grid.Column="0" Content="Light Theme :" HorizontalAlignment="Right"/>
         <CheckBox 
             Grid.Row="1" 
@@ -46,7 +46,7 @@
             TextElement.FontStyle="Italic"/>
 
         <!-- GIT相关配置 -->
-        <Label Grid.Row="3" Grid.ColumnSpan="2" Content="Git Instance" FontSize="18"/>
+        <Label Grid.Row="3" Grid.ColumnSpan="2" Content="GIT INSTANCE" FontSize="16" FontWeight="DemiBold" Opacity=".85"/>
         <Label Grid.Row="4" Grid.Column="0" Content="Install Path :" HorizontalAlignment="Right"/>
         <Grid Grid.Row="4" Grid.Column="1">
             <Grid.ColumnDefinitions>
@@ -81,14 +81,14 @@
         </Grid>
         
         <!-- Global User -->
-        <Label Grid.Row="7" Grid.ColumnSpan="2" Content="Global User" FontSize="18"/>
+        <Label Grid.Row="7" Grid.ColumnSpan="2" Content="GLOBAL USER" FontSize="16" FontWeight="DemiBold" Opacity=".85"/>
         <Label Grid.Row="8" Grid.Column="0" Content="Name :" HorizontalAlignment="Right"/>
         <TextBox Grid.Row="8" Grid.Column="1" Height="24" helpers:TextBoxHelper.Placeholder="Global git user name" Text="{Binding ElementName=me, Path=GlobalUser, Mode=TwoWay}"/>
         <Label Grid.Row="9" Grid.Column="0" Content="Email :" HorizontalAlignment="Right"/>
         <TextBox Grid.Row="9" Grid.Column="1" Height="24" helpers:TextBoxHelper.Placeholder="Global git user email" Text="{Binding ElementName=me, Path=GlobalUserEmail, Mode=TwoWay}"/>
 
         <!-- 合并工具配置 -->
-        <Label Grid.Row="11" Grid.ColumnSpan="2" Content="Merge Tool" FontSize="18"/>
+        <Label Grid.Row="11" Grid.ColumnSpan="2" Content="MERGE TOOL" FontSize="16" FontWeight="DemiBold" Opacity=".85"/>
         <Label Grid.Row="12" Grid.Column="0" Content="Choose Merger :" HorizontalAlignment="Right"/>
         <ComboBox Grid.Row="12" Grid.Column="1"
              Height="24"
