--- a/SourceGit/UI/PopupManager.xaml
+++ b/SourceGit/UI/PopupManager.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="SourceGit.UI.PopupManager"
+<UserControl x:Class="SourceGit.UI.PopupManager"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -15,7 +15,20 @@
                     <DropShadowEffect ShadowDepth="1" Opacity=".5" Direction="270" BlurRadius="16"/>
                 </Border.Effect>
             </Border>
+            
             <Border x:Name="popupContent" Padding="8" Width="Auto" Height="Auto"/>
+
+            <Border x:Name="status" Visibility="Collapsed" Background="{StaticResource Brush.BG1}" Opacity=".9">
+                <StackPanel Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Center">
+                    <Path x:Name="statusIcon" Width="48" Height="48" Style="{StaticResource Style.Icon}" Data="{StaticResource Icon.Loading}" RenderTransformOrigin=".5,.5">
+                        <Path.RenderTransform>
+                            <RotateTransform Angle="0"/>
+                        </Path.RenderTransform>
+                    </Path>
+
+                    <Label x:Name="statusMsg" Margin="0,8,0,0"/>
+                </StackPanel>
+            </Border>
         </Grid>
     </Grid>
 </UserControl>
