--- a/SourceGit/UI/RenameBranch.xaml
+++ b/SourceGit/UI/RenameBranch.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="SourceGit.UI.RenameBranch"
+<UserControl x:Class="SourceGit.UI.RenameBranch"
              x:Name="me"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -54,14 +54,6 @@
 
             <Button Grid.Column="1" Click="Sure" Content="SURE" Style="{StaticResource Style.Button.AccentBordered}"/>
             <Button Grid.Column="3" Click="Cancel" Content="CANCEL" Style="{StaticResource Style.Button.Bordered}"/>
-        </Grid>
-
-        <Grid Grid.Row="0" Grid.RowSpan="6" Grid.ColumnSpan="2" x:Name="status" Visibility="Collapsed" Background="{StaticResource Brush.BG1}" Opacity=".9">
-            <Path x:Name="statusIcon" Width="48" Height="48" Style="{StaticResource Style.Icon}" Data="{StaticResource Icon.Loading}" RenderTransformOrigin=".5,.5">
-                <Path.RenderTransform>
-                    <RotateTransform Angle="0"/>
-                </Path.RenderTransform>
-            </Path>
         </Grid>
     </Grid>
 </UserControl>
