--- a/SourceGit/UI/Preference.xaml
+++ b/SourceGit/UI/Preference.xaml
@@ -8,7 +8,7 @@
         xmlns:app="clr-namespace:SourceGit"
         xmlns:git="clr-namespace:SourceGit.Git"
         mc:Ignorable="d"
-        Height="472" Width="500">
+        Height="500" Width="500">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="36"/>
@@ -19,6 +19,7 @@
             <RowDefinition Height="28"/>
             <RowDefinition Height="18"/>
             <RowDefinition Height="36"/>
+            <RowDefinition Height="28"/>
             <RowDefinition Height="28"/>
             <RowDefinition Height="28"/>
             <RowDefinition Height="18"/>
@@ -81,16 +82,32 @@
         </Grid>
         
         <!-- Global User -->
-        <Label Grid.Row="7" Grid.ColumnSpan="2" Content="GLOBAL USER" FontSize="16" FontWeight="DemiBold" Opacity=".85"/>
+        <Label Grid.Row="7" Grid.ColumnSpan="2" Content="GLOBAL SETTING" FontSize="16" FontWeight="DemiBold" Opacity=".85"/>
         <Label Grid.Row="8" Grid.Column="0" Content="Name :" HorizontalAlignment="Right"/>
         <TextBox Grid.Row="8" Grid.Column="1" Height="24" helpers:TextBoxHelper.Placeholder="Global git user name" Text="{Binding ElementName=me, Path=GlobalUser, Mode=TwoWay}"/>
         <Label Grid.Row="9" Grid.Column="0" Content="Email :" HorizontalAlignment="Right"/>
         <TextBox Grid.Row="9" Grid.Column="1" Height="24" helpers:TextBoxHelper.Placeholder="Global git user email" Text="{Binding ElementName=me, Path=GlobalUserEmail, Mode=TwoWay}"/>
+        <Label Grid.Row="10" Grid.Column="0" Content="Auto CRLF :" HorizontalAlignment="Right"/>
+        <ComboBox Grid.Row="10" Grid.Column="1"
+                  x:Name="cmbAutoCRLF"
+                  Height="24"
+                  HorizontalAlignment="Stretch"
+                  VerticalContentAlignment="Center"
+                  SelectionChanged="AutoCRLFSelectionChanged">
+            <ComboBox.ItemTemplate>
+                <DataTemplate>
+                    <StackPanel Orientation="Horizontal" Height="20">
+                        <Label Content="{Binding Value}" Padding="0" VerticalContentAlignment="Center"/>
+                        <Label Content="{Binding Desc}" Foreground="{StaticResource Brush.FG2}" FontSize="10" Margin="8,0,0,0" Padding="0"/>
+                    </StackPanel>
+                </DataTemplate>
+            </ComboBox.ItemTemplate>
+        </ComboBox>
 
         <!-- 合并工具配置 -->
-        <Label Grid.Row="11" Grid.ColumnSpan="2" Content="MERGE TOOL" FontSize="16" FontWeight="DemiBold" Opacity=".85"/>
-        <Label Grid.Row="12" Grid.Column="0" Content="Choose Merger :" HorizontalAlignment="Right"/>
-        <ComboBox Grid.Row="12" Grid.Column="1"
+        <Label Grid.Row="12" Grid.ColumnSpan="2" Content="MERGE TOOL" FontSize="16" FontWeight="DemiBold" Opacity=".85"/>
+        <Label Grid.Row="13" Grid.Column="0" Content="Choose Merger :" HorizontalAlignment="Right"/>
+        <ComboBox Grid.Row="13" Grid.Column="1"
              Height="24"
              Padding="2,0,0,0"
              HorizontalContentAlignment="Left"
@@ -99,8 +116,8 @@
              ItemsSource="{Binding Source={x:Static git:MergeTool.Supported}}"
              DisplayMemberPath="Name"
              SelectionChanged="ChangeMergeTool"/>
-        <Label Grid.Row="13" Grid.Column="0" Content="Install Path :" HorizontalAlignment="Right"/>
-        <Grid Grid.Row="13" Grid.Column="1">
+        <Label Grid.Row="14" Grid.Column="0" Content="Install Path :" HorizontalAlignment="Right"/>
+        <Grid Grid.Row="14" Grid.Column="1">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="28"/>
@@ -115,13 +132,13 @@
                 <Path Width="14" Style="{StaticResource Style.Icon}" Data="{StaticResource Icon.Folder}"/>
             </Button>
         </Grid>
-        <Label Grid.Row="14" Grid.Column="0" Content="Command :" HorizontalAlignment="Right"/>
-        <TextBlock Grid.Row="14" Grid.Column="1" 
+        <Label Grid.Row="15" Grid.Column="0" Content="Command :" HorizontalAlignment="Right"/>
+        <TextBlock Grid.Row="15" Grid.Column="1" 
                    x:Name="txtMergeParam"
                    VerticalAlignment="Center"
                    Foreground="{StaticResource Brush.FG2}"/>
 
-        <Button Grid.Row="16" Grid.Column="1" 
+        <Button Grid.Row="17" Grid.Column="1" 
                 Content="CLOSE"
                 Click="Close"
                 Width="80"
