--- a/SourceGit/Resources/Styles/TextBox.xaml
+++ b/SourceGit/Resources/Styles/TextBox.xaml
@@ -1,5 +1,7 @@
 <ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:helpers="clr-namespace:SourceGit.Helpers">
+    
     <!-- 错误Tooltip -->
     <ControlTemplate x:Key="Template.Validation.Tooltip" TargetType="{x:Type ToolTip}">
         <Border x:Name="Root" Margin="5,0,0,0" Opacity="0" Padding="0,0,20,20" RenderTransformOrigin="0,0">
@@ -81,6 +83,7 @@
         <Setter Property="Background" Value="Transparent"/>
         <Setter Property="BorderBrush" Value="{DynamicResource Brush.Border1}"/>
         <Setter Property="Validation.ErrorTemplate" Value="{StaticResource Template.Validation.Error}"/>
+        <Setter Property="helpers:TextBoxHelper.AutoScroll" Value="True"/>
 
         <Setter Property="Template">
             <Setter.Value>
@@ -93,10 +96,11 @@
                         <ScrollViewer x:Name="PART_ContentHost"
                                       Margin="{TemplateBinding Padding}"
                                       VerticalAlignment="Center"
-                                      Background="{x:Null}"
+                                      Background="Transparent"
                                       BorderThickness="0"
                                       IsTabStop="False"
-                                      SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" />
+                                      CanContentScroll="False"
+                                      SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"/>
                     </Border>
                         
                     <ControlTemplate.Triggers>
