--- a/SourceGit/UI/WorkingCopy.xaml
+++ b/SourceGit/UI/WorkingCopy.xaml
@@ -343,8 +343,7 @@
                 ScrollViewer.HorizontalScrollBarVisibility="Disabled"
                 ScrollViewer.VerticalScrollBarVisibility="Auto"
                 helpers:TextBoxHelper.Placeholder="Enter commit message"
-                helpers:TextBoxHelper.PlaceholderBaseline="Top"
-                TextChanged="CommitMessageChanged">
+                helpers:TextBoxHelper.PlaceholderBaseline="Top">
                 <TextBox.Text>
                     <Binding ElementName="me" Path="CommitMessage" Mode="TwoWay" UpdateSourceTrigger="PropertyChanged">
                         <Binding.ValidationRules>
