Change the way to show only space or no changes in DiffViewer

--- a/SourceGit/UI/About.xaml
+++ b/SourceGit/UI/About.xaml
@@ -10,7 +10,7 @@
 
     <!-- Enable WindowChrome Feature -->
     <WindowChrome.WindowChrome>
-        <WindowChrome UseAeroCaptionButtons="False" CornerRadius="0" CaptionHeight="32" GlassFrameThickness="0 0 0 1" ResizeBorderThickness="8" NonClientFrameEdges="None" />
+        <WindowChrome UseAeroCaptionButtons="False" CornerRadius="0" CaptionHeight="32"/>
     </WindowChrome.WindowChrome>
 
     <!-- Window Layout -->
