为历史记录的 INFORMATION Tab页中的 CHANGE 增加双击打开文件历史

--- a/SourceGit/UI/CommitViewer.xaml
+++ b/SourceGit/UI/CommitViewer.xaml
@@ -211,6 +211,7 @@
                     <DataGrid.RowStyle>
                         <Style TargetType="{x:Type DataGridRow}" BasedOn="{StaticResource Style.DataGridRow}">
                             <EventSetter Event="ContextMenuOpening" Handler="ChangeListContextMenuOpening"/>
+                            <EventSetter Event="MouseDoubleClick" Handler="ChangeListMouseDoubleClick"/>
                         </Style>
                     </DataGrid.RowStyle>
                 </DataGrid>
