--- a/SourceGit/Resources/Styles/TextBox.xaml
+++ b/SourceGit/Resources/Styles/TextBox.xaml
@@ -84,7 +84,15 @@
         <Setter Property="BorderBrush" Value="{DynamicResource Brush.Border1}"/>
         <Setter Property="Validation.ErrorTemplate" Value="{StaticResource Template.Validation.Error}"/>
         <Setter Property="helpers:TextBoxHelper.AutoScroll" Value="True"/>
-
+        <Setter Property="ContextMenu">
+            <Setter.Value>
+                <ContextMenu>
+                    <MenuItem Command="ApplicationCommands.Copy" />
+                    <MenuItem Command="ApplicationCommands.Cut" />
+                    <MenuItem Command="ApplicationCommands.Paste" />
+                </ContextMenu>
+            </Setter.Value>
+        </Setter>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type TextBox}">
