--- a/SourceGit/App.xaml
+++ b/SourceGit/App.xaml
@@ -2,8 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              Startup="OnAppStartup" 
-             Deactivated="OnAppDeactivated"
-             Exit="OnAppExit">
+             Deactivated="OnAppDeactivated">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
