Enable auto scroll when selection changed in RichTextBox

--- a/SourceGit/UI/Blame.xaml
+++ b/SourceGit/UI/Blame.xaml
@@ -147,6 +147,7 @@
                             ScrollViewer.ScrollChanged="SyncScrollChanged"
                             PreviewMouseWheel="MouseWheelOnContent"
                             SizeChanged="ContentSizeChanged"
+                            SelectionChanged="ContentSelectionChanged"
                             HorizontalAlignment="Stretch"
                             VerticalAlignment="Stretch"
                             FontFamily="Consolas">
